--- a/Buddy.Nancy40/Buddy.Nancy40.csproj
+++ b/Buddy.Nancy40/Buddy.Nancy40.csproj
@@ -190,6 +190,9 @@
     <Compile Include="..\Buddy.Nancy45\Properties\AssemblyInfo.cs">
       <Link>Properties\AssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="..\Buddy.Nancy45\Page\**\*.cs">
+      <Link>Page\%(RecursiveDir)%(FileName)</Link>
+    </Compile>
     <Compile Include="..\Buddy.Nancy45\Serialization\**\*.cs">
       <Link>Serialization\%(RecursiveDir)%(FileName)</Link>
     </Compile>
