--- a/Buddy.Nancy45/Buddy.Nancy45.csproj
+++ b/Buddy.Nancy45/Buddy.Nancy45.csproj
@@ -147,6 +147,10 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Buddy, Version=1.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Buddy.1.0.3.0\lib\net45\Buddy.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Nancy, Version=1.4.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Nancy.1.4.3\lib\net40\Nancy.dll</HintPath>
       <Private>True</Private>
@@ -188,8 +192,13 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Page\LinkBuilder.cs" />
+    <Compile Include="Page\LinkDef.cs" />
+    <Compile Include="Page\LinkRelType.cs" />
+    <Compile Include="Page\LinkType.cs" />
     <Compile Include="Page\PageConfig.cs" />
     <Compile Include="Page\ScriptBuilder.cs" />
+    <Compile Include="Page\ScriptDef.cs" />
+    <Compile Include="Page\ScriptType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\CustomJsonSerializer.cs" />
   </ItemGroup>
