--- a/nuget.config
+++ b/nuget.config
@@ -9,7 +9,8 @@
   </packageRestore>
 
   <packageSources>
-    <add key="NuGet official package source" value="https://nuget.org/api/v2/" />
+    <add key="nuget.org" value="https://nuget.org/api/v2/" />
+    <add key="HoganCode" value="http://nuget.hogancode.com/Hogan/nuget/" />
   </packageSources>
 
   <!-- used to store credentials -->
