--- a/nuspec/Buddy.Nancy.nuspec
+++ b/nuspec/Buddy.Nancy.nuspec
@@ -14,6 +14,7 @@
         <copyright>Copyright 2011</copyright>
         <tags>buddy nancy</tags>
         <dependencies>
+            <dependency id="Buddy" version="1.0.3" />
             <dependency id="Nancy" version="1.4.3" />
             <dependency id="Nancy.Serialization.JsonNet" version="1.4.1" />
             <dependency id="Newtonsoft.Json" version="9.0.1" />
