Moved ScriptBuilder and LinkBuilder to Buddy

--- a/Buddy.Nancy45.Test/Buddy.Nancy45.Test.csproj
+++ b/Buddy.Nancy45.Test/Buddy.Nancy45.Test.csproj
@@ -61,8 +61,6 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="Page\ScriptBuilderTest.cs" />
-    <Compile Include="Page\LinkBuilderTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -77,6 +75,9 @@
       <Project>{56650c3c-8bfb-4115-89d9-a4bcf5ba1a65}</Project>
       <Name>Buddy.Nancy45</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Page\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
