Updated to use PageConfig from Buddy.  Removed .NET 4 support.

--- a/Buddy.Nancy45/Buddy.Nancy45.csproj
+++ b/Buddy.Nancy45/Buddy.Nancy45.csproj
@@ -147,8 +147,8 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Buddy, Version=1.0.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Buddy.1.0.3.0\lib\net45\Buddy.dll</HintPath>
+    <Reference Include="Buddy, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Buddy.1.1.0\lib\net45\Buddy.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Nancy, Version=1.4.2.0, Culture=neutral, processorArchitecture=MSIL">
@@ -191,7 +191,7 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="Page\PageConfig.cs" />
+    <Compile Include="Page\NancyPageConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\CustomJsonSerializer.cs" />
   </ItemGroup>
